--- a/implementacion_modulo_2.ipynb
+++ b/implementacion_modulo_2.ipynb
@@ -22,10 +22,7 @@
     "\n",
     "Para evaluar cada método, se utilizará la métrica f1 score, y se utilizará un 70% de los datos\n",
     "del dataset para entrenamiento y un 30% para test (realizando un sampling aleatorio\n",
-    "previo).\"\"\"\n",
-    "\n",
-    "from IPython.display import Markdown\n",
-    "display(Markdown(ejercicio))"
+    "previo).\"\"\"\n"
    ]
   },
   {
@@ -49,6 +46,37 @@
    "metadata": {},
    "source": [
     "### Método basado en TF-IDF + algoritmo de clasificación de machine learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "# Split the dataset\n",
+    "X = reddit_dataset['clean_post']\n",
+    "y = reddit_dataset['subreddit']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Vectorize the text data\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X_train_tfidf = vectorizer.fit_transform(X_train)\n",
+    "X_test_tfidf = vectorizer.transform(X_test)\n",
+    "\n",
+    "# Train the classifier\n",
+    "classifier = LogisticRegression(max_iter=1000)\n",
+    "classifier.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "# Predict and evaluate\n",
+    "y_pred = classifier.predict(X_test_tfidf)\n",
+    "f1 = f1_score(y_test, y_pred, average='weighted')\n",
+    "print(f'F1 Score: {f1}')"
    ]
   },
   {
