--- a/implementacion_modulo_4.ipynb
+++ b/implementacion_modulo_4.ipynb
@@ -18,13 +18,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Método basado en lexicons"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sentiment_analysis_lexicons(text: str):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def sentiment_analysis(text:str):\n",
@@ -33,8 +46,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "mainenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
