--- a/testing.ipynb
+++ b/testing.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "from core import classify_subreddit\n",
-    "classify_subreddit(text['subereddit'])"
+    "classify_subreddit(text['subreddit'])"
    ]
   },
   {
@@ -67,7 +67,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core import find_subreddit_mentions, url_extract, phone_number_extraction, dates_extraction, code_extraction, \n",
+    "from core import find_subreddit_mentions, url_extract, phone_number_extraction, dates_extraction, code_extraction\n",
+    "\n",
+    "data_test = {\n",
+    "    'subreddit': \n",
+    "    'url': [\n",
+    "        \"Visita https://www.example.com para más información.\",\n",
+    "        \"Nuestro sitio es www.example.org y también tenemos http://example.net.\",\n",
+    "        \"Encuentra recursos en example.com y otros dominios.\",\n",
+    "        \"Sin URLs aquí.\"\n",
+    "    ], \n",
+    "    'phone_number': [\n",
+    "        \"Contacta al 123-456-7890 para más información.\",\n",
+    "        \"Nuestro número es (098) 765-4321.\",\n",
+    "        \"Llámanos al +1 234 567 8901 o al 654 231 235.\",\n",
+    "        \"Sin número de teléfono aquí.\",\n",
+    "        \"Número internacional: +44 20 7946 0958.\",\n",
+    "        \"Código de seguridad: 789\",\n",
+    "        \"Código promocional: +49 123\",\n",
+    "        \"Número corto: 456\",\n",
+    "        \"Otro número: +33 321\"\n",
+    "    ], \n",
+    "    'dates': [\n",
+    "        \"La reunión es el 12/05/2021 y otra el 23-06-2022.\",\n",
+    "        \"Fecha de lanzamiento: March 15, 2023.\",\n",
+    "        \"El proyecto inició en 2020/01/10 y finalizará en 2024-12-31.\",\n",
+    "        \"Sin fechas aquí.\"\n",
+    "    ], \n",
+    "    'code': \n",
+    "}\n",
+    "\n",
     "print('Menciones: \\n')\n",
     "find_subreddit_mentions(text['subereddit'])\n",
     "print('URLs: \\n')\n",
@@ -75,6 +104,7 @@
     "print('Phone numbers: \\n')\n",
     "phone_number_extraction(text['subereddit'])\n",
     "print('Dates: \\n')\n",
+    "\n",
     "dates_extraction(text['subereddit'])\n",
     "print('Codes: \\n')\n",
     "code_extraction(text['subereddit'])"
@@ -621,7 +651,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "mainenv",
    "language": "python",
    "name": "python3"
   },
@@ -635,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
