--- a/implementacion_modulo_2.ipynb
+++ b/implementacion_modulo_2.ipynb
@@ -22,7 +22,10 @@
     "\n",
     "Para evaluar cada método, se utilizará la métrica f1 score, y se utilizará un 70% de los datos\n",
     "del dataset para entrenamiento y un 30% para test (realizando un sampling aleatorio\n",
-    "previo).\"\"\"\n"
+    "previo).\"\"\"\n",
+    "\n",
+    "from IPython.display import Markdown\n",
+    "display(Markdown(ejercicio))"
    ]
   },
   {
@@ -43,27 +46,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.feature_extraction import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "df = pd.read_csv('processed_dataset.csv')\n",
-    "x_data = df['clean_post']\n",
-    "y_data = df['subreddit']\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x_data, y_data, )"
+    "reddit_df = pd.read_csv('processed_dataset.csv', encoding='UTF-8', sep=';', low_memory=False)\n",
+    "reddit_df['clean_post'] = reddit_df['clean_post'].fillna('')\n",
+    "reddit_df['subreddit'] = reddit_df['subreddit'].fillna('')\n",
+    "x_data, y_data = reddit_df['clean_post'], reddit_df['sentiment']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    x_data, \n",
+    "    y_data,\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    shuffle=True\n",
+    ")"
    ]
   },
   {
@@ -80,91 +88,151 @@
     "<h4>Elección del algoritmo de machine learning</h4>\n",
     "\n",
     "Para los métodos de clasificación usaremos regresión logística implementada en la librería sklearn por los siguientes motivos: \n",
-    "<ul>\n",
-    "1. Ideal para clasificación binaria/multiclase\n",
     "\n",
-    "2. Interpretable: Los coeficientes indican importancia de features\n",
+    "- Ideal para clasificación binaria/multiclase\n",
     "\n",
-    "3. Eficiente con datasets grandes\n",
+    "- Interpretable: Los coeficientes indican importancia de features\n",
     "\n",
-    "4. Bueno con datos dispersos (sparse) como text data\n",
+    "- Eficiente con datasets grandes\n",
     "\n",
-    "5. Rápido de entrenar y predecir\n",
-    "</ul>"
+    "- Bueno con datos dispersos (sparse) como text data\n",
+    "\n",
+    "- Rápido de entrenar y predecir\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score: 0.5072098375581701\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import f1_score\n",
     "\n",
-    "# Define features and labels\n",
-    "X = df['clean_post']\n",
-    "y = df['subreddit']\n",
+    "# Features y labels\n",
+    "X = reddit_df['clean_post']\n",
+    "y = reddit_df['subreddit']\n",
     "\n",
-    "# Split the dataset\n",
+    "# Dividimos con train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
-    "# Initialize TF-IDF Vectorizer\n",
     "vectorizer = TfidfVectorizer()\n",
     "\n",
-    "# Transform the data\n",
+    "# Transformamos los datos\n",
     "X_train_tfidf = vectorizer.fit_transform(X_train)\n",
     "X_test_tfidf = vectorizer.transform(X_test)\n",
     "\n",
-    "# Initialize and train classifier\n",
+    "# Clasificador\n",
     "clf = LogisticRegression(max_iter=1000)\n",
     "clf.fit(X_train_tfidf, y_train)\n",
     "\n",
-    "# Predict and evaluate\n",
     "y_pred = clf.predict(X_test_tfidf)\n",
     "f1 = f1_score(y_test, y_pred, average='weighted')\n",
     "print(f'F1 Score: {f1}')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import f1_score\n",
+    "<h3>Análisis del F1 score bajo (0.507)</h3>\n",
     "\n",
-    "# Split the dataset\n",
-    "X = reddit_dataset['clean_post']\n",
-    "y = reddit_dataset['subreddit']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "Posibles causas:\n",
     "\n",
-    "# Vectorize the text data\n",
-    "vectorizer = TfidfVectorizer()\n",
-    "X_train_tfidf = vectorizer.fit_transform(X_train)\n",
-    "X_test_tfidf = vectorizer.transform(X_test)\n",
+    "- Desbalanceo en las clases\n",
     "\n",
-    "# Train the classifier\n",
-    "classifier = LogisticRegression(max_iter=1000)\n",
-    "classifier.fit(X_train_tfidf, y_train)\n",
+    "- Configuración básica de TfidfVectorizer\n",
     "\n",
-    "# Predict and evaluate\n",
-    "y_pred = classifier.predict(X_test_tfidf)\n",
-    "f1 = f1_score(y_test, y_pred, average='weighted')\n",
-    "print(f'F1 Score: {f1}')"
+    "- Parámetros por defecto en Logistic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score: {f1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "def train_tfidf_model(df: pd.DataFrame, \n",
+    "                      text_column: str = 'clean_post',\n",
+    "                      label_column: str = 'subreddit',\n",
+    "                      random_state: int = 42) -> tuple:\n",
+    "    \"\"\"\n",
+    "    Entrena un modelo TF-IDF optimizado para clasificación de texto.\n",
+    "    \n",
+    "    Args:\n",
+    "        df: DataFrame con los datos\n",
+    "        text_column: Nombre de la columna con el texto\n",
+    "        label_column: Nombre de la columna con las etiquetas\n",
+    "        random_state: Semilla aleatoria\n",
+    "        \n",
+    "    Returns:\n",
+    "        tuple: (modelo entrenado, f1_score)\n",
+    "    \"\"\"\n",
+    "    # 1. Preparación de datos\n",
+    "    # Eliminar textos vacíos y muy cortos\n",
+    "    df = df[df[text_column].str.len() > 10].copy()\n",
+    "    \n",
+    "    # Preparar X e y\n",
+    "    X = df[text_column]\n",
+    "    y = df[label_column]\n",
+    "    \n",
+    "    # 2. Split de datos\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X, y,\n",
+    "        test_size=0.3,\n",
+    "        random_state=random_state,\n",
+    "        stratify=y\n",
+    "    )\n",
+    "    \n",
+    "    # 3. Pipeline con hiperparámetros optimizados\n",
+    "    pipeline = Pipeline([\n",
+    "        ('tfidf', TfidfVectorizer(\n",
+    "            max_features=10000,\n",
+    "            min_df=2,\n",
+    "            max_df=0.95,\n",
+    "            ngram_range=(1, 2),\n",
+    "            sublinear_tf=True\n",
+    "        )),\n",
+    "        ('clf', LogisticRegression(\n",
+    "            max_iter=1000,\n",
+    "            n_jobs=-1,\n",
+    "            random_state=random_state\n",
+    "        ))\n",
+    "    ])\n",
+    "    \n",
+    "    # 4. Entrenamiento\n",
+    "    pipeline.fit(X_train, y_train)\n",
+    "    \n",
+    "    # 5. Evaluación\n",
+    "    y_pred = pipeline.predict(X_test)\n",
+    "    f1 = f1_score(y_test, y_pred, average='weighted')\n",
+    "    \n",
+    "    return pipeline, f1\n",
+    "model,f1 = train_tfidf_model(reddit_df)\n",
+    "print('F1 Score: {f1}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,34 +251,7 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import f1_score\n",
-    "\n",
-    "# Load spaCy's English model\n",
-    "nlp = spacy.load('en_core_web_sm')\n",
-    "\n",
-    "# Function to extract named entity labels\n",
-    "def extract_entity_labels(text):\n",
-    "    doc = nlp(text)\n",
-    "    return ' '.join([ent.label_ for ent in doc.ents])\n",
-    "\n",
-    "# Extract entity labels from training and testing data\n",
-    "X_train_entities = X_train.apply(extract_entity_labels)\n",
-    "X_test_entities = X_test.apply(extract_entity_labels)\n",
-    "\n",
-    "# Initialize CountVectorizer\n",
-    "vectorizer_entities = CountVectorizer()\n",
-    "\n",
-    "# Transform the entity labels\n",
-    "X_train_entities_vectorized = vectorizer_entities.fit_transform(X_train_entities)\n",
-    "X_test_entities_vectorized = vectorizer_entities.transform(X_test_entities)\n",
-    "\n",
-    "# Initialize and train classifier\n",
-    "clf_entities = LogisticRegression(max_iter=1000)\n",
-    "clf_entities.fit(X_train_entities_vectorized, y_train)\n",
-    "\n",
-    "# Predict and evaluate\n",
-    "y_pred_entities = clf_entities.predict(X_test_entities_vectorized)\n",
-    "f1_entities = f1_score(y_test, y_pred_entities, average='weighted')\n",
-    "print(f'F1 Score (NER-based): {f1_entities}')"
+    "from typing import List, Tuple\n"
    ]
   },
   {
@@ -237,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
