--- a/implementacion_modulo_4.ipynb
+++ b/implementacion_modulo_4.ipynb
@@ -18,10 +18,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import f1_score"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Método basado en lexicons"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En un método basado en lexicones, no hay un proceso de entrenamiento supervisado convencional; en su lugar, se hace uso de listas o diccionarios de palabras con polaridad (positivas/negativas).\n",
+    "\n",
+    "El f1 score se calcula, en este caso, asumiendo un problema binario (positivo/negativo) y se utiliza una división de datos del 70% para entrenamiento y 30% para prueba de manera aleatoria, siguiendo tus requerimientos."
    ]
   },
   {
@@ -31,7 +52,14 @@
    "outputs": [],
    "source": [
     "def sentiment_analysis_lexicons(text: str):\n",
-    "    "
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Método basado en palabras únicas"
    ]
   },
   {
@@ -40,8 +68,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sentiment_analysis(text:str):\n",
+    "def sentiment_analysis_bow(text:str):\n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Método basado en word embeddgins + ML"
    ]
   }
  ],
@@ -52,7 +87,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.8"
   }
  },
