--- a/testing.ipynb
+++ b/testing.ipynb
@@ -67,15 +67,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core import find_subreddit_mentions, url_extract, phone_number_extraction, dates_extraction, code_extraction\n",
+    "from core import find_subreddit_mentions, url_extraction, phone_number_extraction, dates_extraction, code_extraction\n",
     "\n",
     "data_test = {\n",
-    "    'subreddit': \n",
+    "    'subreddit': [\n",
+    "        \"Me encanta discutir sobre inteligencia artificial en /r/MachineLearning!\",\n",
+    "        \"Revisa las nuevas características en /r/Python y /r/DataScience.\",\n",
+    "        \"Este post no menciona ningún subreddit específico.\",\n",
+    "        \"Para principiantes, /r/learnprogramming es un excelente lugar para comenzar.\",\n",
+    "        \"Ten cuidado con subreddits como /r/spam y /r/scam_groups.\"\n",
+    "    ],\n",
     "    'url': [\n",
     "        \"Visita https://www.example.com para más información.\",\n",
     "        \"Nuestro sitio es www.example.org y también tenemos http://example.net.\",\n",
     "        \"Encuentra recursos en example.com y otros dominios.\",\n",
-    "        \"Sin URLs aquí.\"\n",
+    "        \"Sin URLs aquí.\",\n",
+    "        \"Visita nuestras redes sociales en https://facebook.com/example y https://twitter.com/example.\"\n",
     "    ], \n",
     "    'phone_number': [\n",
     "        \"Contacta al 123-456-7890 para más información.\",\n",
@@ -92,22 +99,37 @@
     "        \"La reunión es el 12/05/2021 y otra el 23-06-2022.\",\n",
     "        \"Fecha de lanzamiento: March 15, 2023.\",\n",
     "        \"El proyecto inició en 2020/01/10 y finalizará en 2024-12-31.\",\n",
-    "        \"Sin fechas aquí.\"\n",
+    "        \"Sin fechas aquí.\",\n",
+    "        \"Evento programado para el 07-04-2021 y el 2021/12/25.\"\n",
     "    ], \n",
-    "    'code': \n",
+    "    'code': [\n",
+    "        \"Aquí hay un ejemplo de código en línea: `print('Hola Mundo')`.\",\n",
+    "        \"Bloque de código:\\n```python\\nfor i in range(5):\\n    print(i)\\n```\",\n",
+    "        \"Me gusta usar HTML: `<div class='container'></div>` en mis proyectos.\",\n",
+    "        \"Sin código aquí.\",\n",
+    "        \"Código JavaScript en línea: `console.log('Hello');`.\",\n",
+    "        \"Otro bloque de código:\\n```html\\n<!DOCTYPE html>\\n<html>\\n</html>\\n```\",\n",
+    "        \"Fragmento de SQL: `SELECT * FROM users WHERE id = 1;`.\",\n",
+    "        \"Código en Java:\\n```java\\npublic class HelloWorld {\\n    public static void main(String[] args) {\\n        System.out.println(\\\"Hello, World!\\\");\\n    }\\n}\\n```\",\n",
+    "        \"Uso de CSS: `<style>\\nbody { background-color: #f0f0f0; }\\n</style>`.\"\n",
+    "    ]\n",
     "}\n",
     "\n",
     "print('Menciones: \\n')\n",
-    "find_subreddit_mentions(text['subereddit'])\n",
+    "for i, text in enumerate(data_test['subreddit']):\n",
+    "    print(f'Test:{text}. Subreddits:{find_subreddit_mentions(text)}\\n')\n",
     "print('URLs: \\n')\n",
-    "url_extract(text['subereddit'])\n",
+    "for i, text in enumerate(data_test['url']):\n",
+    "    print(f'Test:{text}. URLs:{url_extraction(text)}\\n')\n",
     "print('Phone numbers: \\n')\n",
-    "phone_number_extraction(text['subereddit'])\n",
+    "for i, text in enumerate(data_test['phone_number']):\n",
+    "    print(f'Test:{text}. Phone numbers:{phone_number_extraction(text)}\\n')\n",
     "print('Dates: \\n')\n",
-    "\n",
-    "dates_extraction(text['subereddit'])\n",
+    "for i, text in enumerate(data_test['dates']):\n",
+    "    print(f'Test:{text}. Dates:{dates_extraction(text)}\\n')\n",
     "print('Codes: \\n')\n",
-    "code_extraction(text['subereddit'])"
+    "for i, text in enumerate(data_test['code']):\n",
+    "    print(f'Test:{text}. HTML code:{code_extraction(text)}\\n')\n"
    ]
   },
   {
