--- a/implementacion_modulo_3.ipynb
+++ b/implementacion_modulo_3.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,12 +88,17 @@
     "    )\n",
     "    phone_numbers = re.findall(text, phone_number_pattern)\n",
     "    return phone_numbers\n",
+    "\n",
     "def dates_extraction(text: str) -> List[str]|str:\n",
     "    dates_pattern = re.compile(r'')\n",
+    "    dates = re.findall(text, dates_pattern)\n",
+    "    return dates\n",
+    "\n",
     "def code_extraction(text: str) -> List[str]|str:\n",
     "    from bs4 import BeautifulSoup\n",
-    "    plain_text = BeautifulSoup(text, 'html.parser').get_text()\n",
-    "    return plai"
+    "    soup = BeautifulSoup(text, 'html.parser')\n",
+    "    html_code = soup.prettify()\n",
+    "    return html_code"
    ]
   }
  ],
@@ -104,7 +109,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.8"
   }
  },
