--- a/implementacion_modulo_6.ipynb
+++ b/implementacion_modulo_6.ipynb
@@ -9,11 +9,48 @@
     "Para ello, evalúa diferentes alternativas y justifica la elección final tomada. \n",
     "La función se denominará texts_distance(text1: str, text2: str)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cosine similarity con TF-IDF:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import numpy as np\n",
+    "\n",
+    "def texts_distance_tfidf(text1: str, text2: str) -> float:\n",
+    "    '''\n",
+    "    Calcula la distancia entre dos textos usando \n",
+    "    '''\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "mainenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
