--- a/implementacion_modulo_6.ipynb
+++ b/implementacion_modulo_6.ipynb
@@ -220,7 +220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gensimenv",
+   "display_name": "mainenv",
    "language": "python",
    "name": "python3"
   },
